Removed distribution targets and config, which is now build by sbuild-dist project.